[package]
name = "weadless"
version = "0.1.0"
edition = "2021"

[dependencies]
wayland-display-core = { git = "https://github.com/games-on-whales/gst-wayland-display", package = "wayland-display-core" }
gst = { version = "0.23.2", package = "gstreamer", features = ["v1_24"] }
gst-video = { version = "0.23.2", package = "gstreamer-video", features = ["v1_24"] }
gst-app = { version = "0.23.2", package = "gstreamer-app", features = ["v1_24"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
rustvncserver = "2.0.0"

[[bin]]
name = "viewer"
path = "src/viewer.rs"
